yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  namespace: pnt-quiz
  labels:
    app: backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
      tier: backend
  template:
    metadata:
      labels:
        app: backend2
        tier: backend
    spec:
      containers:
        - name: backend2
          image: davenn12/backend2:latest
          imagePullPolicy: Always
