yaml/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  selector:
    app: backend2
    tier: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8030 
      targetPort: 8000
