yaml/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
    tier: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000 
      nodePort : 30080
